base/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: it-request-frontend
  namespace: "staging"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-request-frontend
  template:
    metadata:
      labels:
        app: it-request-frontend
    spec:
      containers:
      - name: it-request-frontend
        image: tanpiyangkoon/it-request-frontend
        # resources:
        #   limits:
        #     cpu: 200m
        #     memory: 512Mi
        #   requests:
        #     cpu: 100m
        #     memory: 256Mi
