base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-request-frontend
  namespace: staging
spec:
  selector:
    app: it-request-frontend  
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080 
  type: ClusterIP
