base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-request-frontend
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: samco.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: it-request-frontend
            port:
              number: 8080
